src/components/DarkModeToggle/DarkModeToggle.module.scss
.toggleWrapper {
    all: unset; /* Resets all button styles */
    position: absolute;
    top: 10px;
    right: 10px;
    z-index: 1000; /* Ensures it's above other elements */

    width: 45px;
    height: 22px;
    background: #eaeaea;
    border-radius: 11px;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    transition: background 0.3s ease-in-out;
    padding: 2px;
  }
  
  .darkMode {
    background: #2c2c2c;
  }
  
  /* Toggle Button */
  .toggleSlider {
    width: 18px;
    height: 18px;
    background: white;
    border-radius: 50%;
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: transform 0.4s ease-in-out;
  }
  
  .dark {
    transform: translateX(23px);
  }
  
  /* Icons */
  .icon {
    width: 14px;
    height: 14px;
    position: absolute;
    transition: opacity 0.3s ease-in-out;
  }
  
  .hidden {
    opacity: 0;
  }
  

